--- a/local.yml
+++ b/local.yml
@@ -15,3 +15,19 @@
       name: request
       global: yes
       state: present
+
+  - name: Download app repo
+    git: 
+      repo: https://github.com/m4rvin/MyApp
+
+  - name: "Install forever (to run Node.js app)."
+      npm: name=forever global=yes state=present
+    
+    - name: "Check list of Node.js apps running."
+      command: forever list
+      register: forever_list
+      changed_when: false
+
+    - name: "Start example Node.js app."
+      command: forever start ./MyApp/app/server.js
+      when: "forever_list.stdout.find('./MyApp/app/server.js') == -1"
